--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -6,4 +6,5 @@
   margin-top:10px;
   overflow-x: auto;
   overflow-y: hidden;
+  padding-bottom: 90px; /* for popup to be visible when popup opened on bottom of image*/
 }
