now annotations doable on top of text

--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -28,3 +28,8 @@
   white-space: -o-pre-wrap;   /* Opera 7 */    
   word-wrap: break-word;      /* IE */
 }
+
+/* second canvas needs to be on top of text divs...*/
+canvas.annotorious-opacity-fade ~ canvas.annotorious-opacity-fade {
+  z-index:1;
+}
