--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -13,9 +13,7 @@
   top: 365px;
   left: 227px;
   font-weight: bold;
-  color: darkViolet;
-  background-color: rgb(255, 255, 255);
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #eeecb3;
   padding: 5px;
   margin-top: 2px;
   max-width: 180px;
@@ -32,4 +30,13 @@
 /* second canvas needs to be on top of text divs...*/
 canvas.annotorious-opacity-fade ~ canvas.annotorious-opacity-fade {
   z-index:1!important;
+}
+
+.ui-resizable-handle {
+  background-color: #eeecb3;
+}
+
+.annotorious-editor {
+  /* needs to be visible on top of resizalbe handle! */
+  z-index: 92!important
 }
