added padding to ui wrapper for making editor always visible

--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -42,6 +42,6 @@ canvas.annotorious-opacity-fade ~ canvas.annotorious-opacity-fade {
 }
 
 .ui-wrapper {
-  /* make this so that text box is completely visible on the right...
+  /* make this so that text box is completely visible on the right...*/
   padding-right: 350px;
 }
