added shadow to annotations

--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -27,6 +27,7 @@
   white-space: -pre-wrap;     /* Opera <7 */   
   white-space: -o-pre-wrap;   /* Opera 7 */    
   word-wrap: break-word;      /* IE */
+  box-shadow: 2px 2px 2px rgb(100, 100, 100);
 }
 
 /* second canvas needs to be on top of text divs...*/
