next try with css :)

--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -43,5 +43,5 @@ canvas.annotorious-opacity-fade ~ canvas.annotorious-opacity-fade {
 
 .ui-wrapper {
   /* make this so that text box is completely visible on the right...*/
-  padding-right: 350px;
+  margin-right: 350px;
 }
