--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -25,6 +25,8 @@
   white-space: -pre-wrap;     /* Opera <7 */   
   white-space: -o-pre-wrap;   /* Opera 7 */    
   word-wrap: break-word;      /* IE */
+  /* needs to be visible on top of resizalbe handle! */
+  z-index: 92;
 }
 
 /* second canvas needs to be on top of text divs...*/
