--- a/youtube-gadget/css/youtube-gadget.css
+++ b/youtube-gadget/css/youtube-gadget.css
@@ -11,8 +11,12 @@ body {
   margin-left: 10px;
 }
 
-#youtubePlayerResizableWrap {
-  padding: 15px;
+#modeButtonsDiv button {
+  display:none;
+}
+
+.youtubePlayerResizable {
+  padding: 0px 15px 15px 0px;
   margin-bottom: 35px;
   /* make width same as player :) */ 
   display: inline-block;
