--- a/image-annotorious-gadget/css/image-annotation-gadget.css
+++ b/image-annotorious-gadget/css/image-annotation-gadget.css
@@ -1,5 +1,5 @@
 #scrollBodyWrapper {
-  /* for scrolling sicne scrolling does not work yt for iframe by gadget pref :(*/
+  /* for scrolling since scrolling does not work yt for iframe by gadget pref :(*/
   overflow-x: auto;
   margin-bottom:6px;
 }
