--- a/list-gadget/css/list-gadget.css
+++ b/list-gadget/css/list-gadget.css
@@ -23,37 +23,57 @@
     font-family: arial, sans-serif;
 }
 .cells0{
+    padding-left:13px;
+    padding-right:13px;
     background-color: #7F93A3;
     text-align:center;
     color:white;
     font-weight: bold;
     height: 25px;
-    width: 120px;
+    width: 94px;
     border-left: 0px solid #E6ECF1;
-    border-top: 0px solid #E6ECF1;
+    border-top: 1px solid #E6ECF1;
     border-bottom: 1px solid #E6ECF1;
     border-right: 1px solid #E6ECF1;
 }
 .cells1{
+    padding-left:13px;
+    padding-right:13px;
     color:black;
     text-align:center;
     font-weight: normal;
     height: 25px;
-    width: 120px;
+    width: 94px;
     border-left: 0px solid #E6ECF1;
     border-top: 0px solid #E6ECF1;
     border-bottom: 1px solid #E6ECF1;
     border-right: 1px solid #E6ECF1;
 }
 .cells2{
+    padding-left:13px;
+    padding-right:13px;
     color:black;
     text-align:center;
     background-color: #F6F8FA;
     font-weight: normal;
     height: 25px;
-    width: 120px;
+    width: 94px;
     border-left: 0px solid #E6ECF1;
     border-top: 0px solid #E6ECF1;
     border-bottom: 1px solid #E6ECF1;
     border-right: 1px solid #E6ECF1;
+}
+.bufClass1{
+    font-size: 14px;
+    font-weight: bold;
+    width: auto;
+    position: absolute;
+    visibility: hidden;
+}
+.bufClass2{
+    font-size: 13px;
+    font-weight: normal;
+    width: auto;
+    position: absolute;
+    visibility: hidden;
 }
