--- a/youtube-gadget/css/youtube-gadget.css
+++ b/youtube-gadget/css/youtube-gadget.css
@@ -25,6 +25,7 @@ body {
 .timeButtons {
   display:none;
 }
+
 .timeButtons button {
   /* make it look more like rizzoma button */
   background-color: #589bdd;
@@ -39,10 +40,19 @@ body {
 }
 
 .timeText {
-  color: #5b7f9b;
+  color: #64a8eb;
   font-weight: bold;
+  padding: 2px;
+  font-size: 0.9em;
+  border: 1px solid #EEEEEE;
+  border-radius: 5px;
   /* try aligning with button text*/
   vertical-align: middle;
+}
+
+.timeFeedback {
+  font-size: 0.75em;
+  color: grey;
 }
 
 .ui-resizable-handle {
