--- a/multi-criteria-decision-gadget/css/gadget.css
+++ b/multi-criteria-decision-gadget/css/gadget.css
@@ -1,12 +1,57 @@
-.ui-slider {
-width:100px;
+th {
+    text-align: left;
 }
+
+tbody tr td:first-child {
+    padding-right: 15px;
+}
+
+.slider-container {
+    margin-top:18%;
+    margin-right: 7px;
+    margin-left: 7px;
+}
+
+.ui-slider, .slider-value {
+    width:100px;
+}
+
+.ui-slider, .slider-value {
+    visibility: hidden;
+}
+td:hover .ui-slider,  td:hover .slider-value {
+    visibility:visible;
+}
+
 .ui-slider .ui-slider-handle {
     width: 1em;
     height: 1em;
     top: -15%;
-    margin-left: -15%;
+    margin-left: -10%;
 }
-tbody tr td:first-child {
-    padding-right: 15px;
+
+.slider-value {
+    text-align: center;
+    color: black;
+}
+
+td {
+    /* standard values for colors before changed through average vote value */
+    background-color: hsla(180, 100%, 50%, 0.6);
+    color: hsl(180, 70%, 25%);
+}
+
+.average-vote {
+    float: left;
+    width: 104px;
+    height: 54px;
+    position: fixed;
+    line-height: 54px;
+    text-align: center;
+    font-size: 2em;
+}
+
+
+td:hover .average-vote {
+    visibility:hidden;
 }
