--- a/multi-criteria-decision-gadget/css/gadget.css
+++ b/multi-criteria-decision-gadget/css/gadget.css
@@ -39,6 +39,7 @@ td {
     /* standard values for colors before changed through average vote value */
     background-color: hsla(180, 100%, 50%, 0.6);
     color: hsl(180, 70%, 25%);
+    border-radius: 7px;
 }
 
 .average-vote {
