google docs gadget withopen in new tab button

--- a/google-docs-gadget/css/google-docs-gadget.css
+++ b/google-docs-gadget/css/google-docs-gadget.css
@@ -11,6 +11,15 @@ body {
   margin-left: 10px;
 }
 
+#newTabDiv {
+  display:none;
+  text-align: right;
+  padding: 2px;
+}
+
+#newTabLink {
+  color: #3184d6;
+}
 
 #googleDocDiv {
   height: 450px;
